adding everything I have
